--- a/media/mediaserver/mediaserver_dynamic.rc
+++ b/media/mediaserver/mediaserver_dynamic.rc
@@ -1,4 +1,4 @@
 on property:init.svc.media=*
     setprop init.svc.mediadrm ${init.svc.media}
 
-import /system/etc/init/hw/mediaserver.${ro.zygote}.rc
+import /system/etc/init/hw/mediaserver.64bit_${ro.mediaserver.64b.enable:-false}.rc
